force-app/main/default/objects/bofc__BOFC_Object_Picklist__c/bofc__BOFC_Object_Picklist__c.object-meta.xml
<CustomObject>
    <label>BOFC Object Picklist</label>
    <nameField>
        <label>BOFC Object Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFC Object Picklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>