force-app/main/default/objects/bofc__BOFC_Object_Picklist__c/fields/bofc__BOFCOBFieldsDetails__c.field-meta.xml
<CustomField>
    <fullName>bofc__BOFCOBFieldsDetails__c</fullName>
    <label>BOFCOBFieldsDetails</label>
    <referenceTo>bofc__BOFCOBFieldsDetails__c</referenceTo>
    <relationshipLabel>BOFC Object Picklists</relationshipLabel>
    <relationshipName>BOFC_Object_Picklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>