force-app/main/default/objects/bofc__BOFC_Object_Picklist__c/fields/bofc__Order_by__c.field-meta.xml
<CustomField>
    <fullName>bofc__Order_by__c</fullName>
    <label>Order by</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>