force-app/main/default/objects/bofc__BOFC_Object_Picklist__c/fields/bofc__Pickist_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Pickist_Name__c</fullName>
    <label>Pickist Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>