force-app/main/default/objects/bofc__BOFC_Object_Picklist__c/fields/bofc__Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>bofc__Picklist_Value__c</fullName>
    <label>Picklist Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>