force-app/main/default/objects/bofc__BOFC_Object_Picklist__c/fields/bofc__Picklist_Value_Long__c.field-meta.xml
<CustomField>
    <fullName>bofc__Picklist_Value_Long__c</fullName>
    <label>Picklist Value Long</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>